<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="com.example.lenovo.hulijinengtong.activity.RegistActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_userName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cgt_et_regist_userName"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_regist_userName"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_nickName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cgt_et_regist_nickName"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_regist_nickName"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_pwd"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cgt_et_regist_pwd"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/text_hint_regist_pwd"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_confirmPwd"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cgt_et_regist_rpwd"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/text_hint_regist_rpwd"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/cgt_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/text_regist_btn" />
</LinearLayout>
